aggiuta gestione registrazione e autenticazione interna

--- a/public/home.html
+++ b/public/home.html
@@ -3,9 +3,13 @@
 
 </head>
 <body>
+    <div class="topnav">
+        <a href="users">Registrati</a>
+        <a href="#chat">Chat</a>
+        <a href="#account">Account</a>
+    </div>
     <div>
-        <h1>Hello! this is home page</h1>
-        <h3>Serving static HTML file using Node.js</h3>
+        <h1>Home</h1>
     </div>
 </body>
 </html>
