migliorata un po' la grafica della home page

--- a/public/home.html
+++ b/public/home.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <head>
 
+    <style>
+        body {background-color: #538f79;}
+
+        h1 {
+            color: white;
+            border: #04AA6D;
+        }
+
+        .button {
+          border: none;
+          color: white;
+          padding: 10px 32px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 15px;
+          margin: 2px 8px;
+          cursor: pointer;
+        }
+        
+        .topbutton {background-color: #04AA6D;}
+        </style>
+
 </head>
 <body>
     <div class="topnav">
-        <a href="users">Registrati</a>
-        <a href="#chat">Chat</a>
-        <a href="#account">Account</a>
+        <a href="#users"><button class="button topbutton">Registrati</button></a>
+        <a href="#chat"><button class="button topbutton">Chat</button></a>
+        <a href="#account"><button class="button topbutton">Account</button></a>
     </div>
     <div>
-        <h1>Home</h1>
+        <h1>rUmate</h1>
     </div>
 </body>
 </html>
