--- a/public/home.html
+++ b/public/home.html
@@ -25,5 +25,7 @@
 
 <button type="button" onclick="logout();">logout</button>
 
+<script src="script.js"></script>
+
 <div>
     <h1>Lista Annunci</h1>
