--- a/public/home.html
+++ b/public/home.html
@@ -3,44 +3,69 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js;">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Home</title>
 </head>
 <body>
 <form action="signup" method="post" name="signupform" id="signupform">
     <span>Registrati</span>
+    <br>
     <span id="signupUser"></span>
+    <span>username</span>
     <input name="username" id="signupUsername"/>
+    <br>
+    <span>password</span>
     <input name="password" id="signupPassword"/>
+    <br>
     <button type="button" onclick="signup();">signup</button>
 </form>
 
+<br>
+
 <form action="login" method="post" name="loginform" id="loginform">
     <span>Loggati</span>
+    <br>
     <span id="loginUser"></span>
+    <span>username</span>
     <input name="username" id="loginUsername"/>
+    <br>
+    <span>password</span>
     <input name="password" id="loginPassword"/>
+    <br>
     <button type="button" onclick="login();">login</button>
 </form>
 
-<button type="button" onclick="logout();">logout</button>
+<br>
 
-<script src="script.js"></script>
+<button type="button" onclick="logout();">logout</button>
 
 <div>
     <h1>Lista Annunci</h1>
 
 <form action="publishAd" method="post" name="publishAdform" id="publishAdform">
     <span>Pubblica annuncio</span>
+    <br>
     <span id="pubishAd"></span>
 
-    <input name="owner" id="publishAdOwner"/>
+    <!-- <input name="owner" id="publishAdOwner"/> -->
+    <span>prezzo</span>
     <input name="prize" id="publishAdPrize"/>
+    <span>tipo stanza</span>
     <input name="room" id="publishAdRoom"/>
+    <span>sesso</span>
     <input name="flat_sex" id="publishAdFlat_sex"/>
+    <span>residenza</span>
     <input name="residence_zone" id="publishAdResidence_zone"/>
-    <input name="expiry_date" id="publishAdExpiry_date"/>
+    <span>scadenza</span>
+    <input type="date" name="expiry_date" id="publishAdExpiry_date"/>
+    <span>numero coinquilini</span>
     <input name="roommate" id="publishAdRoommate"/>
 
+    <br>
     <button type="button" onclick="publishAd();">publishAd</button>
 </form>
+
+<script src="script.js"></script>
+
+</body>
