aggiunta visualizzazione annunci con possibilità di cliccare e visualizzare ogni annuncio

--- a/public/home.html
+++ b/public/home.html
@@ -40,8 +40,8 @@
 
 <button type="button" onclick="logout();">logout</button>
 
-<div>
-    <h1>Lista Annunci</h1>
+<h1>Lista Annunci</h1>
+<ul id="ads"></ul>
 
 <form action="publishAd" method="post" name="publishAdform" id="publishAdform">
     <span>Pubblica annuncio</span>
