aggiunta autenticazione con google

--- a/public/home.html
+++ b/public/home.html
@@ -19,6 +19,7 @@
     <input name="password" id="signupPassword"/>
     <br>
     <button type="button" onclick="signup();">signup</button>
+    <button type="button" onclick="signWithGoogle();">Google</button>
 </form>
 
 <br>
