Aggiunto router, installato naive

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gabriel Fumagalli, Simone Vigasio, Stefano Camposilvan">
+    <meta name="description" content="Trento Apartaments Ads Visualization">
+    <meta name="keywords" content="Apartaments Ads, Stationery">
+    <link rel="icon" href="/favicon.ico">
     <title>rUmate</title>
   </head>
   <body>
