--- a/public/home.html
+++ b/public/home.html
@@ -3,8 +3,9 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js;">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
     <title>Home</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
     <br>
     <button type="button" onclick="signup();">signup</button>
     <button type="button" onclick="signWithGoogle();">Google</button>
+    <button type="button" onclick="signWithGoogle2();">Google2</button>
 </form>
 
 <br>
