aggiunta commentazione codice

--- a/public/home.html
+++ b/public/home.html
@@ -21,7 +21,7 @@
     <br>
     <button type="button" onclick="signup();">signup</button>
     <button type="button" onclick="signWithGoogle();">Google</button>
-    <button type="button" onclick="signWithGoogle2();">Google2</button>
+    <!-- <button type="button" onclick="signWithGoogle2();">Google2</button> -->
 </form>
 
 <br>
