aggiunta API per visualizzazione di ogni chat di un utente, aggiunta versione 1 del frontend

--- a/public/home.html
+++ b/public/home.html
@@ -44,7 +44,7 @@
 <br>
 <br>
 
-<form action="messages" method="get" name="viewChatForn" id="messages">
+<form action="messages" method="get" name="viewChatForm" id="messages">
     <span>destinatario</span>
     <input name="receiver" id="receiverVc"/>
     <br>
