API notifiche complete

--- a/public/home.html
+++ b/public/home.html
@@ -174,11 +174,8 @@
 </form>
 
 
-<h1>Lista Annunci</h1>
-<ul id="ads"></ul>
-
 <form action="publishAd" method="post" name="publishAdform" id="publishAdform">
-    <span>Pubblica annuncio</span>
+    <h1>Pubblica annuncio</h1>
     <br>
 
     <span id="pubishAd"></span>
@@ -244,6 +241,17 @@
 
     <button type="button" onclick="publishAd();">publishAd</button>
 </form>
+
+<h1>Notifiche</h1>
+<form id="notif"></form>
+<button type="button" onclick="readNotifications();">readNotifications</button>
+<button type="button" onclick="generateNotificationExample();">generateNotificationExample</button>
+
+
+
+
+
+
 
 <script src="script.js"></script>
 
