aggiunti test primi 10 test cases

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="Apartaments Ads, Stationery">
     <link rel="icon" href="/favicon.ico">
     <title>rUmate</title>
+    <style>
+      body {
+          background-color: black;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
